redirecting 404.html title and logo

--- a/404.html
+++ b/404.html
@@ -2,7 +2,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
+    <title>SpeedNet Logistics</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="images/logoW.png">
     <script>
       // Redirect based on the URL path
       const path = window.location.pathname;
