--- a/404.html
+++ b/404.html
@@ -3,7 +3,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpeedNet Logistics</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="images/logoW.png">
     <script>
       // Redirect based on the URL path
       const path = window.location.pathname;
@@ -22,6 +21,6 @@
     </script>
   </head>
   <body>
-    <p>Redirecting...</p>
+    <a href="javascript:void(0);" onclick="openPage('index.html');"><img src="images/logo.png" alt="Logo" class="navbar-logo"></a>
   </body>
 </html>
