--- a/404.html
+++ b/404.html
@@ -21,6 +21,6 @@
     </script>
   </head>
   <body>
-    <a href="javascript:void(0);" onclick="openPage('index.html');"><img src="images/logo.png" alt="Logo" class="navbar-logo"></a>
+    <img src="images/logo.png" alt="Logo" class="navbar-logo">
   </body>
 </html>
