--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpeedNet Logistics</title>
+    <link rel="icon" type="image/png" href="images/logo2.png">
     <script>
       // Redirect based on the URL path
       const path = window.location.pathname;
@@ -21,6 +22,6 @@
     </script>
   </head>
   <body>
-    <img src="images/logo.png" alt="Logo" class="navbar-logo">
+    <p>Redirecting...</p>
   </body>
 </html>
