Front page update

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 
     <div class="main-content">
         <section id="start" class="start">
+            <div class="slide"></div>
+            <div class="slide"></div>
+            <div class="slide"></div>
             <div class="container">
                 <h1 id="start_h1"><span>Connect your business with the world</span></h1>
                 <p id="start_p1" style="color: #f6e277;">It doesn't matter if you run a global powerhouse or local startup. We're here to help your business grow.</p>
